--- a/app.yaml
+++ b/app.yaml
@@ -1,1 +1,11 @@
 runtime: python37
+env: standard
+instance_class: F1
+handlers:
+  - url: '.*'
+    script: auto
+automatic_scaling:
+  min_idle_instances: automatic
+  max_idle_instances: automatic
+  min_pending_latency: automatic
+  max_pending_latency: automatic
